src/hts/private/hts_concat.nim

 {.deadCodeElim: on.}
when defined(windows):
  const
    libname* = "libhts.dll"
elif defined(macosx):
  const
    libname* = "libhts.dylib"
else:
  const
    libname* = "libhts.so"
##
## enum hts_fmt_option {
##     // CRAM specific
##     CRAM_OPT_DECODE_MD,
##     CRAM_OPT_PREFIX,
##     CRAM_OPT_VERBOSITY,  // obsolete, use hts_set_log_level() instead
##     CRAM_OPT_SEQS_PER_SLICE,
##     CRAM_OPT_SLICES_PER_CONTAINER,
##     CRAM_OPT_RANGE,
##     CRAM_OPT_VERSION,    // rename to cram_version?
##     CRAM_OPT_EMBED_REF,
##     CRAM_OPT_IGNORE_MD5,
##     CRAM_OPT_REFERENCE,  // make general
##     CRAM_OPT_MULTI_SEQ_PER_SLICE,
##     CRAM_OPT_NO_REF,
##     CRAM_OPT_USE_BZIP2,
##     CRAM_OPT_SHARED_REF,
##     CRAM_OPT_NTHREADS,   // deprecated, use HTS_OPT_NTHREADS
##     CRAM_OPT_THREAD_POOL,// make general
##     CRAM_OPT_USE_LZMA,
##     CRAM_OPT_USE_RANS,
##     CRAM_OPT_REQUIRED_FIELDS,
##     CRAM_OPT_LOSSY_NAMES,
##     CRAM_OPT_BASES_PER_SLICE,
##
##     // General purpose
##     HTS_OPT_COMPRESSION_LEVEL = 100,
##     HTS_OPT_NTHREADS,
##     HTS_OPT_THREAD_POOL,
##     HTS_OPT_CACHE_SIZE,
##     HTS_OPT_BLOCK_SIZE,
## };
##

const
  BAM_FPAIRED* = 1

## ! @abstract the read is mapped in a proper pair

const
  BAM_FPROPER_PAIR* = 2

## ! @abstract the read itself is unmapped; conflictive with BAM_FPROPER_PAIR

const
  BAM_FUNMAP* = 4

## ! @abstract the mate is unmapped

const
  BAM_FMUNMAP* = 8

## ! @abstract the read is mapped to the reverse strand

const
  BAM_FREVERSE* = 16

## ! @abstract the mate is mapped to the reverse strand

const
  BAM_FMREVERSE* = 32

## ! @abstract this is read1

const
  BAM_FREAD1* = 64

## ! @abstract this is read2

const
  BAM_FREAD2* = 128

## ! @abstract not primary alignment

const
  BAM_FSECONDARY* = 256

## ! @abstract QC failure

const
  BAM_FQCFAIL* = 512

## ! @abstract optical or PCR duplicate

const
  BAM_FDUP* = 1024

## ! @abstract supplementary alignment

const
  BAM_FSUPPLEMENTARY* = 2048
  HTS_FMT_CSI* = 0
  HTS_FMT_BAI* = 1
  HTS_FMT_TBI* = 2
  HTS_FMT_CRAI* = 3
  BCF_HT_FLAG* = 0
  BCF_HT_INT* = 1
  BCF_HT_REAL* = 2
  BCF_HT_STR* = 3
  HTS_IDX_NOCOOR* = (-2)
  HTS_IDX_START* = (-3)
  HTS_IDX_REST* = (-4)
  HTS_IDX_NONE* = (-5)

proc malloc*(size: csize): pointer {.cdecl, importc: "malloc", dynlib: libname.}
proc free*(a1: pointer) {.cdecl, importc: "free", dynlib: libname.}
proc strncpy*(dst: cstring; src: cstring; size: csize): cstring {.cdecl,
    importc: "strncpy", dynlib: libname.}
proc strtol*(str: cstring; endptr: cstringArray; base: cint): clong {.cdecl,
    importc: "strtol", dynlib: libname.}
const
  BCF_DT_ID* = 0
  BCF_DT_CTG* = 1
  BCF_DT_SAMPLE* = 2

type
  hFILE* {.bycopy.} = object


## ############################
## # kstring
## ############################

type
  kstring_t* {.bycopy.} = object
    l*: csize
    m*: csize
    s*: cstring


proc ks_release*(s: ptr kstring_t): cstring {.inline, cdecl, importc: "ks_release",
    dynlib: libname.}
proc kputsn*(a1: cstring; a2: cint; a3: ptr kstring_t) {.cdecl, importc: "kputsn",
    dynlib: libname.}
## ##########################
## # BGZF
## ##########################

type
  bgzidx_t* {.bycopy.} = object

  bgzf_mtaux_t* {.bycopy.} = object

  z_stream* {.bycopy.} = object

  BGZF* {.bycopy.} = object
    errcode* {.bitsize: 16.}: cuint ##  Reserved bits should be written as 0; read as "don't care"
    reserved* {.bitsize: 1.}: cuint
    is_write* {.bitsize: 1.}: cuint
    no_eof_block* {.bitsize: 1.}: cuint
    is_be* {.bitsize: 1.}: cuint
    compress_level* {.bitsize: 9.}: cint
    last_block_eof* {.bitsize: 1.}: cuint
    is_compressed* {.bitsize: 1.}: cuint
    is_gzip* {.bitsize: 1.}: cuint
    cache_size*: cint
    block_length*: cint
    block_clength*: cint
    block_offset*: cint
    block_address*: int64
    uncompressed_address*: int64
    uncompressed_block*: pointer
    compressed_block*: pointer
    cache*: pointer            ##  a pointer to a hash table
    fp*: ptr hFILE              ##  actual file handle
    mt*: ptr bgzf_mtaux_t       ##  only used for multi-threading
    idx*: ptr bgzidx_t          ##  BGZF index
    idx_build_otf*: cint       ##  build index on the fly, set by bgzf_index_build_init()
    gz_stream*: ptr z_stream    ##  for gzip-compressed files


proc bgzf_open*(path: cstring; mode: cstring): ptr BGZF {.cdecl, importc: "bgzf_open",
    dynlib: libname.}
proc bgzf_close*(fp: ptr BGZF): cint {.cdecl, importc: "bgzf_close", dynlib: libname.}
proc bgzf_hopen*(fp: ptr hFILE; mode: cstring): ptr BGZF {.cdecl, importc: "bgzf_hopen",
    dynlib: libname.}
proc bgzf_flush*(fp: ptr BGZF): cint {.cdecl, importc: "bgzf_flush", dynlib: libname.}
## *
##  Write _length_ bytes from _data_ to the file.  If no I/O errors occur,
##  the complete _length_ bytes will be written (or queued for writing).
##
##  @param fp     BGZF file handler
##  @param data   data array to write
##  @param length size of data to write
##  @return       number of bytes written (i.e., _length_); negative on error
##

proc bgzf_write*(fp: ptr BGZF; data: pointer; length: csize): int64 {.cdecl,
    importc: "bgzf_write", dynlib: libname.}
template bgzf_tell*(fp: untyped): untyped =
  (((fp).block_address shl 16) or ((fp).block_offset and 0x0000FFFF))

proc bgzf_getline*(fp: ptr BGZF; delim: cint; str: ptr kstring_t): cint {.cdecl,
    importc: "bgzf_getline", dynlib: libname.}
proc bgzf_mt*(fp: ptr BGZF; n_threads: cint; n_sub_blks: cint): cint {.cdecl,
    importc: "bgzf_mt", dynlib: libname.}
type
  htsFormatCategory* {.size: sizeof(cint).} = enum
    unknown_category, sequence_data, ##  Sequence data -- SAM, BAM, CRAM, etc
    variant_data,             ##  Variant calling data -- VCF, BCF, etc
    index_file,               ##  Index file associated with some data file
    region_list,              ##  Coordinate intervals or regions -- BED, etc
    category_maximum = 32767


type
  htsExactFormat* {.size: sizeof(cint).} = enum
    unknown_format, binary_format, text_format, sam, bam, bai, cram, crai, vcf, bcf, csi,
    gzi, tbi, bed, json, format_maximum = 32767


type
  htsCompression* {.size: sizeof(cint).} = enum
    no_compression, gzip, bgzf, custom, compression_maximum = 32767


type
  INNER_C_STRUCT_hts_concat_193* {.bycopy.} = object
    major*: cshort
    minor*: cshort

  htsFormat* {.bycopy.} = object
    category*: htsFormatCategory
    format*: htsExactFormat
    version*: INNER_C_STRUCT_hts_concat_193
    compression*: htsCompression
    compression_level*: cshort ##  currently unused
    specific*: pointer         ##  format specific options; see struct hts_opt.


## ###########################
## # hts
## ###########################

type
  INNER_C_UNION_hts_concat_212* {.bycopy, union.} = object
    bgzf*: ptr BGZF
    cram*: ptr cram_fd
    hfile*: ptr hFILE

  cram_fd* {.bycopy.} = object

  hts_idx_t* {.bycopy.} = object

  htsFile* {.bycopy.} = object
    is_bin* {.bitsize: 1.}: uint32
    is_write* {.bitsize: 1.}: uint32
    is_be* {.bitsize: 1.}: uint32
    is_cram* {.bitsize: 1.}: uint32
    is_bgzf* {.bitsize: 1.}: uint32
    dummy* {.bitsize: 27.}: uint32
    lineno*: int64
    line*: kstring_t
    fn*: cstring
    fn_aux*: cstring
    fp*: INNER_C_UNION_hts_concat_212
    format*: htsFormat


proc hts_open*(fn: cstring; mode: cstring): ptr htsFile {.cdecl, importc: "hts_open",
    dynlib: libname.}
proc hts_close*(fp: ptr htsFile): cint {.cdecl, importc: "hts_close", dynlib: libname.}
proc hts_check_EOF*(fp: ptr htsFile): cint {.cdecl, importc: "hts_check_EOF",
                                        dynlib: libname.}
proc hts_getline*(fp: ptr htsFile; delimiter: cint; str: ptr kstring_t): cint {.cdecl,
    importc: "hts_getline", dynlib: libname.}
proc hts_set_threads*(fp: ptr htsFile; n: cint): cint {.cdecl,
    importc: "hts_set_threads", dynlib: libname.}
proc hts_set_fai_filename*(fp: ptr htsFile; fn_aux: cstring): cint {.cdecl,
    importc: "hts_set_fai_filename", dynlib: libname.}
type
  hts_readrec_func* = proc (fp: ptr BGZF; data: pointer; r: pointer; tid: ptr cint;
                         beg: ptr cint; `end`: ptr cint): cint {.cdecl.}
  hts_id2name_f* = proc (a1: pointer; a2: cint): cstring {.cdecl.}
  hts_itr_t* {.bycopy.} = object


proc hts_idx_init*(n: cint; fmt: cint; offset0: uint64; min_shift: cint; n_lvls: cint): ptr hts_idx_t {.
    cdecl, importc: "hts_idx_init", dynlib: libname.}
proc hts_idx_destroy*(idx: ptr hts_idx_t) {.cdecl, importc: "hts_idx_destroy",
                                        dynlib: libname.}
proc hts_idx_push*(idx: ptr hts_idx_t; tid: cint; beg: cint; `end`: cint; offset: uint64;
                  is_mapped: cint): cint {.cdecl, importc: "hts_idx_push",
                                        dynlib: libname.}
proc hts_idx_finish*(idx: ptr hts_idx_t; final_offset: uint64) {.cdecl,
    importc: "hts_idx_finish", dynlib: libname.}
proc hts_idx_save*(idx: ptr hts_idx_t; fn: cstring; fmt: cint) {.cdecl,
    importc: "hts_idx_save", dynlib: libname.}
proc hts_idx_load*(fn: cstring; fmt: cint): ptr hts_idx_t {.cdecl,
    importc: "hts_idx_load", dynlib: libname.}
proc hts_idx_load2*(fn: cstring; fnidx: cstring): ptr hts_idx_t {.cdecl,
    importc: "hts_idx_load2", dynlib: libname.}
proc hts_idx_get_meta*(idx: ptr hts_idx_t; l_meta: ptr cint): ptr uint8 {.cdecl,
    importc: "hts_idx_get_meta", dynlib: libname.}
proc hts_idx_set_meta*(idx: ptr hts_idx_t; l_meta: uint32; meta: ptr uint8; is_copy: cint): cint {.
    cdecl, importc: "hts_idx_set_meta", dynlib: libname.}
proc hts_idx_get_stat*(idx: ptr hts_idx_t; tid: cint; mapped: ptr uint64;
                      unmapped: ptr uint64): cint {.cdecl,
    importc: "hts_idx_get_stat", dynlib: libname.}
proc hts_idx_get_n_no_coor*(idx: ptr hts_idx_t): uint64 {.cdecl,
    importc: "hts_idx_get_n_no_coor", dynlib: libname.}
proc hts_parse_reg*(s: cstring; beg: ptr cint; `end`: ptr cint): cstring {.cdecl,
    importc: "hts_parse_reg", dynlib: libname.}
proc hts_itr_query*(idx: ptr hts_idx_t; tid: cint; beg: cint; stop: cint;
                   readrec: hts_readrec_func): ptr hts_itr_t {.cdecl,
    importc: "hts_itr_query", dynlib: libname.}
proc hts_itr_destroy*(iter: ptr hts_itr_t) {.cdecl, importc: "hts_itr_destroy",
    dynlib: libname.}
proc hts_itr_next*(fp: ptr BGZF; iter: ptr hts_itr_t; r: pointer; data: pointer): cint {.
    cdecl, importc: "hts_itr_next", dynlib: libname.}
proc hts_idx_seqnames*(idx: ptr hts_idx_t; n: ptr cint; getid: hts_id2name_f;
                      hdr: pointer): cstringArray {.cdecl,
    importc: "hts_idx_seqnames", dynlib: libname.}
type
  hts_itr_query_func* = proc (idx: ptr hts_idx_t; tid: cint; beg: cint; `end`: cint;
                           readrec: ptr hts_readrec_func): ptr hts_itr_t {.cdecl.}
  hts_name2id_f* = proc (a1: pointer; a2: cstring): cint {.cdecl.}

proc hts_itr_querys*(idx: ptr hts_idx_t; reg: cstring; getid: hts_name2id_f;
                    hdr: pointer; itr_query: ptr hts_itr_query_func;
                    readrec: ptr hts_readrec_func): ptr hts_itr_t {.cdecl,
    importc: "hts_itr_querys", dynlib: libname.}
## ###########################
## # tbx
## ###########################

type
  tbx_conf_t* {.bycopy.} = object
    preset*: int32
    sc*: int32
    bc*: int32
    ec*: int32                 ##  seq col., beg col. and end col.
    meta_char*: int32
    line_skip*: int32

  tbx_t* {.bycopy.} = object
    conf*: tbx_conf_t
    idx*: ptr hts_idx_t
    dict*: pointer

